--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.0.9",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
+    "preact": "^10.26.5",
     "tailwindcss": "^4.0.14"
   }
 }
